--- a/index.html
+++ b/index.html
@@ -9,32 +9,35 @@
 
     <meta
       name="description"
-      content="Explore Indonesia with JavaIndoTrip! Affordable travel packages, guided tours, and unforgettable experiences in Java, Bali, and beyond."
+      content="JavaIndoTrip adalah agen travel terbaik di Semarang yang menawarkan paket wisata ke seluruh Indonesia, termasuk Bali, Yogyakarta, dan destinasi populer lainnya."
     />
 
     <meta
       name="keywords"
-      content="Java travel, Bali tours, Indonesia trips, travel agency, vacation, adventure, JavaIndoTrip"
+      content="travel agent Semarang, paket wisata Semarang, agen travel Indonesia, tour Bali, wisata Yogyakarta, JavaIndoTrip, perjalanan Indonesia"
     />
 
+    <meta name="author" content="JavaIndoTrip" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://javaindotrip.com/" />
+
+    <!-- Open Graph (OG) Meta Tags -->
     <meta content="https://javaindotrip.com/" property="og:url" />
     <meta content="website" property="og:type" />
-
     <meta
-      content="Java Indo Trip - travel agency, vacation, adventure"
+      content="JavaIndoTrip - Travel Agent Semarang & Wisata Indonesia"
       property="og:title"
     />
     <meta
-      content="Website Java Indo Trip travel agency, vacation, adventure, JavaIndoTrip"
+      content="Nikmati perjalanan terbaik dengan JavaIndoTrip, agen travel Semarang yang menyediakan paket wisata ke Bali, Yogyakarta, dan seluruh Indonesia."
       property="og:description"
     />
-
     <meta
       content="https://javaindotrip.com/logo.png"
       property="og:image"
     />
-
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <meta content="JavaIndoTrip" property="og:site_name" />
 
     <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -47,13 +50,13 @@
     />
 
     <!-- Title -->
-    <title>JavaIndoTrip - Best Travel Agency for Indonesia Tours</title>
+    <title>JavaIndoTrip - Travel Agent Semarang & Wisata Indonesia</title>
 
-    <meta name="author" content="JavaIndoTrip" />
+    <!-- Language Alternates -->
+    <link rel="alternate" hreflang="x-default" href="https://javaindotrip.com/" />
 
-    <!-- SEO Best Practices -->
-    <link rel="canonical" href="https://javaindotrip.com/" />
-    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
   </head>
   <body>
     <!-- React App Root -->
